feat: added users api

--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "db:migrate": "drizzle-kit migrate",
     "db:push": "drizzle-kit push",
     "db:studio": "drizzle-kit studio",
-    "db:drop": "drizzle-kit drop"
+    "db:drop": "drizzle-kit drop",
+    "db:startAll": "drizzle-kit generate && drizzle-kit migrate && drizzle-kit studio"
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
