--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,8 @@ DBEAVER_ADMIN_PASSWORD=your_password_here
 REDIS_HOST=localhost
 REDIS_PORT=6379
 REDIS_PASSWORD=redis_password
+CACHE_TTL=300
+CACHE_MAX_ITEMS=1000
 
 # Kafka
 KAFKA_BROKERS=localhost:9092
