feat: added cicd

--- a/.env.example
+++ b/.env.example
@@ -33,8 +33,14 @@ DEEPL_API_KEY=your-deepl-api-key
 GOOGLE_TRANSLATE_API_KEY=your-google-translate-api-key
 
 # External Integrations
-GITHUB_WEBHOOK_SECRET=your-github-webhook-secret
 JIRA_API_URL=https://your-domain.atlassian.net
 JIRA_API_TOKEN=your-jira-api-token
 TRELLO_API_KEY=your-trello-api-key
 TRELLO_API_TOKEN=your-trello-api-token
+
+# Required for deployments
+GITHUB_WEBHOOK_SECRET=your-github-webhook-secret
+
+# Optional: For enhanced notifications
+SLACK_WEBHOOK_URL= # For Slack notifications
+DISCORD_WEBHOOK_URL= # For Discord notifications
