--- a/package.json
+++ b/package.json
@@ -13,11 +13,16 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "lint:check": "eslint \"{src,apps,libs,test}/**/*.ts\"",
+    "format:check": "prettier --check \"src/**/*.ts\" \"test/**/*.ts\"",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
+    "test:ci": "jest --coverage --watchAll=false --passWithNoTests",
+    "security:audit": "pnpm audit",
+    "security:fix": "pnpm audit fix",
     "docker:build": "docker build -t nestjs-app .",
     "docker:build:prod": "docker build -t nestjs-app:prod --target production .",
     "docker:dev": "docker-compose up --build",
@@ -25,6 +30,8 @@
     "docker:down": "docker-compose down",
     "docker:down:prod": "docker-compose -f docker-compose.prod.yml down",
     "docker:logs": "docker-compose logs -f app",
+    "ci:validate": "pnpm run lint:check && pnpm run format:check && pnpm run build && pnpm run test:ci",
+    "precommit": "pnpm run lint && pnpm run format && pnpm run test",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
     "db:push": "drizzle-kit push",
@@ -43,6 +50,7 @@
     "@nestjs/swagger": "^11.2.0",
     "bcrypt": "^6.0.0",
     "cache-manager": "^7.2.0",
+    "chalk": "^4.1.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "drizzle-orm": "^0.44.5",
@@ -82,6 +90,11 @@
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.20.0"
   },
+  "pnpm": {
+    "overrides": {
+      "esbuild": ">=0.25.0"
+    }
+  },
   "jest": {
     "moduleFileExtensions": [
       "js",
@@ -97,6 +110,12 @@
       "**/*.(t|j)s"
     ],
     "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
+    "testEnvironment": "node",
+    "transformIgnorePatterns": [
+      "node_modules/(?!(chalk)/)"
+    ],
+    "moduleNameMapper": {
+      "^chalk$": "chalk"
+    }
   }
 }
